--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "brain_hacker",
   "private": true,
   "dependencies": {
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "file-loader": "^1.1.6",
     "hover.css": "^2.2.1",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.10",
+    "material-ui": "^0.20.1",
     "react": "^16.2.0",
     "react-circular-progressbar": "^0.8.0",
     "react-dom": "^16.2.0",
